--- a/saphana.html
+++ b/saphana.html
@@ -33,7 +33,7 @@
         }
     });
 </script>
-<script type="text/x-red" data-template-name="runquery">
+<script type="text/x-red" data-template-name="run_query">
     <div class="form-row">
         <label for="node-input-mydb"><i class="fa fa-database"></i> Database</label>
         <input type="text" id="node-input-mydb">
